RESOLVED FIXED79779
[Chromium] Uninitialized value in LocaleToScriptCodeForFontSelection
https://bugs.webkit.org/show_bug.cgi?id=79779
Summary [Chromium] Uninitialized value in LocaleToScriptCodeForFontSelection
Kenichi Ishibashi
Reported 2012-02-28 04:53:08 PST
This cause valgrind memcheck errors. http://crbug.com/109491
Attachments
Patch (1.62 KB, patch)
2012-02-28 04:54 PST, Kenichi Ishibashi
no flags
Kenichi Ishibashi
Comment 1 2012-02-28 04:54:58 PST
Kenichi Ishibashi
Comment 2 2012-02-28 04:56:18 PST
(In reply to comment #1) > Created an attachment (id=129231) [details] > Patch I checked the fix by following command: % tools/valgrind/chrome_tests.sh -b out/Debug --test webkit --tool memcheck fast/selectors/lang-inheritance2.html Could you take a look, kent-san?
Kent Tamura
Comment 3 2012-02-28 05:55:38 PST
Comment on attachment 129231 [details] Patch ok
Kenichi Ishibashi
Comment 4 2012-02-28 17:08:13 PST
Comment on attachment 129231 [details] Patch Thank you!
WebKit Review Bot
Comment 5 2012-02-28 17:28:22 PST
Comment on attachment 129231 [details] Patch Clearing flags on attachment: 129231 Committed r109175: <http://trac.webkit.org/changeset/109175>
WebKit Review Bot
Comment 6 2012-02-28 17:28:26 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.