[Chromium] Uninitialized value in LocaleToScriptCodeForFontSelection https://bugs.webkit.org/show_bug.cgi?id=79779

Set USCRIPT_COMMON to scriptCode as the initial value.

Reviewed by Kent Tamura.

No new tests. No behavior change.

* platform/text/LocaleToScriptMappingICU.cpp:
(WebCore::localeToScriptCodeForFontSelection):


Canonical link: https://commits.webkit.org/96933@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@109175 268f45cc-cd09-0410-ab3c-d52691b4dbfc